--- a/FLUX/manifests/sonarqube-dce-auth-jwt.yaml
+++ b/FLUX/manifests/sonarqube-dce-auth-jwt.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 data:
-  SONAR_AUTH_JWTBASE64HS256SECRET: RVNhYVl4Q3FsaWRja0lxS3dmVUs1cHhvSnFPSGJkdEhDOHQvVHFDNk5lbz0=
+  SONAR_AUTH_JWTBASE64HS256SECRET: your_key 
 kind: Secret
 metadata:
   creationTimestamp: "2024-08-14T10:38:10Z"
